ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

EXTRA_DIST = autogen.sh BLOCKPAGE.md CHANGELOG.md DIRECTIVES.md LICENSE README.md TESTING.md \
	debian/changelog debian/compat debian/control debian/copyright debian/debhelper-build-stamp debian/dirs debian/libapache2-mod-perimeterx.apache2 debian/libapache2-mod-perimeterx.docs debian/libapache2-mod-perimeterx.examples debian/libapache2-mod-perimeterx.postinst debian/libapache2-mod-perimeterx.postrm debian/libapache2-mod-perimeterx.prerm debian/libapache2-mod-perimeterx.README.Debian debian/perimeterx.load debian/postinst debian/prerm debian/rules debian/watch \
	examples/Dockerfile examples/index.html examples/README.md \
	build/build_centos.sh.in build/build_ubuntu.sh.in build/rpm/mod_perimeterx.spec.in build/scripts/build_deb.sh build/scripts/build_rpm.sh
